# pizzabot

./: .gitignore  pizza_robot_project_brief.md
src/: pyproject.toml
src/assets/SO101/: scene.xml
src/pizzabot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scripts/: start.py
